apps/nfs-client/service.yml
kind: Service
apiVersion: v1
metadata:
  name: nfs-web
spec:
  ports:
    - name: http
      port: 80
  selector:
    role: web-frontend
